--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
   <header>
-    <h1>My E-Portfolio</h1>
+    <h1>Alexandro Soto's e-Portfolio</h1>
+    <p>Welcome to my e-portfolio! Here you can learn about my skills, interests, and projects. Please feel free to explore the different sections of my portfolio.</p>
   </header>
   <nav>
     <ul>
@@ -19,11 +20,11 @@
     </ul>
   </nav>
   <main>
-    <img src="images/profile-picture.jpg" alt="Profile Picture">
-    <p>Welcome to my e-portfolio! Here you can learn about my skills, interests, and projects. Please feel free to explore the different sections of my portfolio.</p>
+    <img src="https://miro.medium.com/v2/resize:fit:640/format:webp/1*H0Um4GOsS6vq_6AHxbo5Nw.jpeg" alt="Profile Picture">
   </main>
   <footer>
-    <p>&copy; 2023 My Name</p>
+    <p>&copy; Alexandro Soto</p>
   </footer>
 </body>
 </html>
+
