--- a/projects.html
+++ b/projects.html
@@ -23,10 +23,15 @@
     <ol>
       <li>
         <a href="https://github.com/FloMiami/U.S-Highway-Identifier">U.S-Highway-Identifier</a> - This is a Java project where the user inputs a U.S interstate highway number and the program returns whether the interstate is a primary or auxiliary highway. It also indicates if the (primary) highway runs north/south or east/west.
-
       </li>
       <li>
         <a href="https://github.com/FloMiami/Leet-speak-password-Generator">Leet-speak-password-Generator</a> - This Java program prompts the user to enter a simple lowercase password ( 8 - 15 characters in length ) and makes it stronger by making it leet.
+      </li>      
+    <li>
+        <a href="https://github.com/FloMiami/Decimation-Simulation">Decimation-Simulation</a> - This Java program simulates the decimation of a population. The user enters the size of a population and a percentage to use for decimation.
+      </li>
+       <li>
+        <a href="https://github.com/FloMiami/Radio-Creator">Radio Creator</a> - This Java project is a multi-class program that creates two radio objects each with its own AM/FM band, volume, and frequency. The program adjusts these data members and prints out each radio's attributes.
       </li>
     </ol>
   </main>
