--- a/projects.html
+++ b/projects.html
@@ -34,7 +34,7 @@
         <a href="https://github.com/FloMiami/Radio-Creator">Radio Creator</a> - This Java project is a multi-class program that creates two radio objects each with its own AM/FM band, volume, and frequency. The program adjusts these data members and prints out each radio's attributes.
       </li>
     </ol>
-  <img src="https://assets.entrepreneur.com/content/3x2/2000/1631038470-Ent-JavaProgramming.jpg?format=pjeg&auto=webp&crop=1:1" alt="Program Code Being Written">
+  <img src="https://assets.entrepreneur.com/content/3x2/2000/1631038470-Ent-JavaProgramming.jpg?format=pjeg&auto=webp&crop=1:1" alt="Program Code Being Written">  width="50%" height="auto">
   </main>
   <footer>
     <p>&copy; 2023 Alexandro Soto</p>
