--- a/interests.html
+++ b/interests.html
@@ -21,10 +21,10 @@
   <main>
     <h2>Software Engineering </h2>
     <p>
-      One of my passions is software engineering. I love solving difficult problems and admire the work that innovative auto manufacturers Tesla and Mercedez-Benz are doing with the software in their newer vehicles. I utilize LinkedIn to network and learn from other Software Engineering professionals and strongly advise anyone interested in S.W.E to be on LinkedIn. I have found many great software engineering newsletters on LinkedIn that teach me something new everyday.
+      One of my passions is software engineering. I love solving difficult problems and admire the work that innovative auto manufacturers Tesla and Mercedez-Benz are doing with the software in their newer vehicles. I utilize LinkedIn to network and learn from other Software Engineering professionals and strongly advise anyone interested in S.W.E to be on LinkedIn. I have found many great software engineering newsletters on LinkedIn that teach me something new every day.
     </p>
     <h3>
-      One of my faviorte LinkedIn Software Engineering creators
+      One of my favorite LinkedIn Software Engineering creators
     </h3>
     <ul>
       <li><a href="https://www.linkedin.com/in/nk-systemdesign-one/">Neo K. Author of System Design Newsletter (22K+ Subscribers)</a></li>
@@ -35,7 +35,7 @@
   
     <h2>Stock Market Investing </h2>
     <p>
-     Another one of my passions is stock market investing. I have been an active investor since the age of 18. I have had great gains in the thousands as well as horrible losses in the thousands. My two favorite mentors on investing is Warren buffet and Charlie munger. I have read the autobiography of Warren Buffet and recommend it to anyone trying to learn stock market investments. It is easy to read and very interesting. I find their advice refreshing and practical in a world where social media “guru’s” try to convince everyone that buying their course on trading options will make them a millionaire.  
+     Another one of my passions is stock market investing. I have been an active investor since the age of 18. I have had great gains in the thousands as well as horrible losses in the thousands. My two favorite mentors in investing are Warren Buffet and Charlie Munger. I have read the autobiography of Warren Buffet and recommend it to anyone trying to learn about stock market investments. It is easy to read and very interesting. I find their advice refreshing and practical in a world where social media “gurus” try to convince everyone that buying their course on trading options will make them a millionaire.  
    </p>
 <h3>
    Stock Marketing Investing Advice From $119B Men Warren Buffet and Charlie Munger:
