--- a/projects.html
+++ b/projects.html
@@ -35,6 +35,7 @@
       </li>
     </ol>
   <img src="https://assets.entrepreneur.com/content/3x2/2000/1631038470-Ent-JavaProgramming.jpg?format=pjeg&auto=webp&crop=1:1" alt="Program Code Being Written" width="50%" height="auto">
+    <figcaption> Programming Language On Computer Screen.</figcaption>
   </main>
   <footer>
     <p>&copy; 2023 Alexandro Soto</p>
